--- a/order-service-dev.yml
+++ b/order-service-dev.yml
@@ -1,1 +1,23 @@
+#spring:
+#  application:
+#    name: order-service
 
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/ordercgidevdb?allowPublicKeyRetrievel=true&useSSL=false&createDatabseIfNotExist=true
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    datanase-platform: org.hibernate.dialect.MySQL8Dialect
+    
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761
